# 20k-project

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  Run_dashboard.py  api.py  dashboard.py  data_scraper.py  pyproject.toml  requirements.txt  sentiment_analysis.py  sentiment_analysis_data.csv  topic_modelling.py
.github/workflows/: ci.yml
notebooks/: openai_rag_agent_w_evals.ipynb
scratch_index/: index.faiss  index.pkl
src/: __init__.py  ai_send_receive_pdf.py  config.py  eval.py  ingest.py  job_dashboard.py  job_scraper.py  rag_pipeline.py
tests/: __init__.py  demo_rag.py  test_rag.py
