[tool.poetry]
name = "openai-rag-agent"
version = "0.1.0"
description = "Retrieval-Augmented Generation agent with evaluation harness."
authors = ["Zhang TongYan <example@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.0"
langchain = "^0.1.0"
python-dotenv = "^1.0"
numpy = "^1.26"
rich = "^13.7"
tiktoken = "^0.6"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
black = "^24.3"
flake8 = "^7.0"
isort = "^5.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
